PP-8138 remove credentials from gatewayaccount entity
- remove top level `credentials` from `GatewayAccountEntity`
- remove `credentials` from `GatewayAccount`
- update/refactor classes accordingly
- update/refactor tests